# apricot

./: .gitignore  Makefile  Makefile.am  Makefile.in  README  apricot  autogen.sh  configure  configure.ac  hash.c
cgi-bin/: Makefile  adder.c  admin.c  cgi.c  cgi.h  cookie.c  csapp.c  traceroute.c
doc/: conf_files.txt  detail_extensions.tex
src/: Makefile  conf.c  cookie.c  dispatcher.c  dynamic.c  http_error.c  http_header.c  log.c  main.c  master.c  mime.c  mqueue.c  pool.c  rewrite.c  static.c  utils.c  worker.c
src/include/apricot/: conf.h  cookie.h  dispatcher.h  dynamic.h  http_codes.h  http_error.h  http_header.h  log.h  master.h  mime.h  mqueue.h  pool.h  rewrite.h  static.h  utils.h  worker.h
tests/: Makefile  charge.ml  test.ml  test1.ml
